<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#CE93D8"
    android:backgroundTint="#3F51B5"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="#DCD7D7"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_sub_title"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator_1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator_2"
        android:textColor="@color/white" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dip" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/school_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dip" />

    <Button
        android:id="@+id/startAllButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_begin_text"
        android:textColor="#3F51B5" />
</LinearLayout>